--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="shortcut icon" href="#">
+    <link rel="shortcut icon" href="#" />
     <meta charset="utf-8">
     <title>Pokemon</title>
 </head>
